update price history script

--- a/scripts/price_data.ipynb
+++ b/scripts/price_data.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "# write skipped symbols to csv file\n",
     "df_symbols_skipped = pd.DataFrame(symbols_skipped)\n",
-    "df_symbols_skipped.to_csv(outdir + 'symbols_skipped.csv', mode='a', header=False, index=False)"
+    "df_symbols_skipped.to_csv(outdir + 'symbols_skipped_price.csv', mode='a', header=False, index=False)"
    ]
   }
  ],
