--- a/scripts/mktcap_data.ipynb
+++ b/scripts/mktcap_data.ipynb
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/39 [00:00<?, ?it/s]\n"
+      "100%|██████████| 39/39 [00:14<00:00,  2.70it/s]\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,46 +188,46 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>42</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>300</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>713981.122128</td>\n",
+       "      <td>3.000000e+02</td>\n",
+       "      <td>7.140303e+05</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>365</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>404</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>611</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,86 +240,86 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>XPB</td>\n",
+       "      <th>5922</th>\n",
+       "      <td>REALPLATFORM</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>XDQ</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>FLDC</td>\n",
+       "      <th>5923</th>\n",
+       "      <td>REAL</td>\n",
+       "      <td>1.000000e+08</td>\n",
+       "      <td>7.820000e+08</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>SLR</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>SMAC</td>\n",
+       "      <th>5924</th>\n",
+       "      <td>REVU</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5925</th>\n",
+       "      <td>STARL</td>\n",
+       "      <td>1.000000e+13</td>\n",
+       "      <td>2.731700e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5926</th>\n",
+       "      <td>SYS</td>\n",
+       "      <td>6.312714e+08</td>\n",
+       "      <td>7.644697e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>218 rows × 6 columns</p>\n",
+       "<p>5927 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    symbol  supply         mktcap  mktcapPenalty  circulatingSupply  \\\n",
-       "0       42     0.0       0.000000            0.0                  0   \n",
-       "1      300   300.0  713981.122128            0.0                  0   \n",
-       "2      365     0.0       0.000000            0.0                  0   \n",
-       "3      404     0.0       0.000000            0.0                  0   \n",
-       "4      611     0.0       0.000000            0.0                  0   \n",
-       "..     ...     ...            ...            ...                ...   \n",
-       "213    XPB     0.0       0.000000            0.0                  0   \n",
-       "214    XDQ     0.0       0.000000            0.0                  0   \n",
-       "215   FLDC     0.0       0.000000            0.0                  0   \n",
-       "216    SLR     0.0       0.000000            0.0                  0   \n",
-       "217   SMAC     0.0       0.000000            0.0                  0   \n",
+       "            symbol        supply        mktcap  mktcapPenalty  \\\n",
+       "0               42  0.000000e+00  0.000000e+00            0.0   \n",
+       "1              300  3.000000e+02  7.140303e+05            0.0   \n",
+       "2              365  0.000000e+00  0.000000e+00            0.0   \n",
+       "3              404  0.000000e+00  0.000000e+00            0.0   \n",
+       "4              611  0.000000e+00  0.000000e+00            0.0   \n",
+       "...            ...           ...           ...            ...   \n",
+       "5922  REALPLATFORM  0.000000e+00  0.000000e+00            0.0   \n",
+       "5923          REAL  1.000000e+08  7.820000e+08            0.0   \n",
+       "5924          REVU  0.000000e+00  0.000000e+00            0.0   \n",
+       "5925         STARL  1.000000e+13  2.731700e+08            0.0   \n",
+       "5926           SYS  6.312714e+08  7.644697e+08            0.0   \n",
        "\n",
-       "     circulatingSupplyMktcap  \n",
-       "0                        0.0  \n",
-       "1                        0.0  \n",
-       "2                        0.0  \n",
-       "3                        0.0  \n",
-       "4                        0.0  \n",
-       "..                       ...  \n",
-       "213                      0.0  \n",
-       "214                      0.0  \n",
-       "215                      0.0  \n",
-       "216                      0.0  \n",
-       "217                      0.0  \n",
+       "      circulatingSupply  circulatingSupplyMktcap  \n",
+       "0                   0.0                      0.0  \n",
+       "1                   0.0                      0.0  \n",
+       "2                   0.0                      0.0  \n",
+       "3                   0.0                      0.0  \n",
+       "4                   0.0                      0.0  \n",
+       "...                 ...                      ...  \n",
+       "5922                0.0                      0.0  \n",
+       "5923                0.0                      0.0  \n",
+       "5924                0.0                      0.0  \n",
+       "5925                0.0                      0.0  \n",
+       "5926                0.0                      0.0  \n",
        "\n",
-       "[218 rows x 6 columns]"
+       "[5927 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
