data-processing, granger test

--- a/scripts/mktcap_data.ipynb
+++ b/scripts/mktcap_data.ipynb
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 39/39 [00:14<00:00,  2.70it/s]\n"
+      "100%|██████████| 39/39 [00:11<00:00,  3.29it/s]\n"
      ]
     }
    ],
@@ -139,6 +139,8 @@
     "                    'mktcapPenalty': price_data['MKTCAPPENALTY'],\n",
     "                    'circulatingSupply': price_data['CIRCULATINGSUPPLY'],\n",
     "                    'circulatingSupplyMktcap': price_data['CIRCULATINGSUPPLYMKTCAP'],\n",
+    "                    'conversionType': price_data['CONVERSIONTYPE'],\n",
+    "                    'conversionSymbol': price_data['CONVERSIONSYMBOL']\n",
     "                }\n",
     "                row_list.append(relevant_price_data)\n",
     "            else:\n",
@@ -182,26 +184,32 @@
        "      <th>mktcapPenalty</th>\n",
        "      <th>circulatingSupply</th>\n",
        "      <th>circulatingSupplyMktcap</th>\n",
+       "      <th>conversionType</th>\n",
+       "      <th>conversionSymbol</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>42</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>4.199995e+01</td>\n",
+       "      <td>3.317996e+07</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>41.999952</td>\n",
+       "      <td>3.317996e+07</td>\n",
+       "      <td>direct</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>300</td>\n",
        "      <td>3.000000e+02</td>\n",
-       "      <td>7.140303e+05</td>\n",
+       "      <td>6.073940e+05</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -209,8 +217,10 @@
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -218,8 +228,10 @@
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>direct</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -227,8 +239,10 @@
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>BTC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -238,85 +252,110 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5922</th>\n",
+       "      <th>5938</th>\n",
        "      <td>REALPLATFORM</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>direct</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5923</th>\n",
+       "      <th>5939</th>\n",
        "      <td>REAL</td>\n",
        "      <td>1.000000e+08</td>\n",
-       "      <td>7.820000e+08</td>\n",
+       "      <td>5.235000e+08</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>direct</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5924</th>\n",
+       "      <th>5940</th>\n",
        "      <td>REVU</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>USDT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5925</th>\n",
+       "      <th>5941</th>\n",
        "      <td>STARL</td>\n",
        "      <td>1.000000e+13</td>\n",
-       "      <td>2.731700e+08</td>\n",
+       "      <td>1.691164e+08</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>WETH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5926</th>\n",
+       "      <th>5942</th>\n",
        "      <td>SYS</td>\n",
-       "      <td>6.312714e+08</td>\n",
-       "      <td>7.644697e+08</td>\n",
+       "      <td>6.324372e+08</td>\n",
+       "      <td>4.930480e+08</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>multiply</td>\n",
+       "      <td>USDT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5927 rows × 6 columns</p>\n",
+       "<p>5943 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            symbol        supply        mktcap  mktcapPenalty  \\\n",
-       "0               42  0.000000e+00  0.000000e+00            0.0   \n",
-       "1              300  3.000000e+02  7.140303e+05            0.0   \n",
+       "0               42  4.199995e+01  3.317996e+07            0.0   \n",
+       "1              300  3.000000e+02  6.073940e+05            0.0   \n",
        "2              365  0.000000e+00  0.000000e+00            0.0   \n",
        "3              404  0.000000e+00  0.000000e+00            0.0   \n",
        "4              611  0.000000e+00  0.000000e+00            0.0   \n",
        "...            ...           ...           ...            ...   \n",
-       "5922  REALPLATFORM  0.000000e+00  0.000000e+00            0.0   \n",
-       "5923          REAL  1.000000e+08  7.820000e+08            0.0   \n",
-       "5924          REVU  0.000000e+00  0.000000e+00            0.0   \n",
-       "5925         STARL  1.000000e+13  2.731700e+08            0.0   \n",
-       "5926           SYS  6.312714e+08  7.644697e+08            0.0   \n",
+       "5938  REALPLATFORM  0.000000e+00  0.000000e+00            0.0   \n",
+       "5939          REAL  1.000000e+08  5.235000e+08            0.0   \n",
+       "5940          REVU  0.000000e+00  0.000000e+00            0.0   \n",
+       "5941         STARL  1.000000e+13  1.691164e+08            0.0   \n",
+       "5942           SYS  6.324372e+08  4.930480e+08            0.0   \n",
        "\n",
-       "      circulatingSupply  circulatingSupplyMktcap  \n",
-       "0                   0.0                      0.0  \n",
-       "1                   0.0                      0.0  \n",
-       "2                   0.0                      0.0  \n",
-       "3                   0.0                      0.0  \n",
-       "4                   0.0                      0.0  \n",
-       "...                 ...                      ...  \n",
-       "5922                0.0                      0.0  \n",
-       "5923                0.0                      0.0  \n",
-       "5924                0.0                      0.0  \n",
-       "5925                0.0                      0.0  \n",
-       "5926                0.0                      0.0  \n",
+       "      circulatingSupply  circulatingSupplyMktcap conversionType  \\\n",
+       "0             41.999952             3.317996e+07         direct   \n",
+       "1              0.000000             0.000000e+00       multiply   \n",
+       "2              0.000000             0.000000e+00       multiply   \n",
+       "3              0.000000             0.000000e+00         direct   \n",
+       "4              0.000000             0.000000e+00       multiply   \n",
+       "...                 ...                      ...            ...   \n",
+       "5938           0.000000             0.000000e+00         direct   \n",
+       "5939           0.000000             0.000000e+00         direct   \n",
+       "5940           0.000000             0.000000e+00       multiply   \n",
+       "5941           0.000000             0.000000e+00       multiply   \n",
+       "5942           0.000000             0.000000e+00       multiply   \n",
        "\n",
-       "[5927 rows x 6 columns]"
+       "     conversionSymbol  \n",
+       "0                      \n",
+       "1                 BTC  \n",
+       "2                 BTC  \n",
+       "3                      \n",
+       "4                 BTC  \n",
+       "...               ...  \n",
+       "5938                   \n",
+       "5939                   \n",
+       "5940             USDT  \n",
+       "5941             WETH  \n",
+       "5942             USDT  \n",
+       "\n",
+       "[5943 rows x 8 columns]"
       ]
      },
      "execution_count": 6,
